--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^3.5.2",
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
+    "bulma": "^0.3.2",
     "font-awesome": "^4.7.0",
     "moment": "^2.17.1",
     "vue": "^2.1.10",
